# Bookmark

./: .gitignore  README.md  alembic.ini  bookmark_db.db  config.py  pyproject.toml
alembic/versions/: 0cb3c2d7fd4a_initial_migration.py  3351a0c9dffc_initial_migration.py  33559b02590a_init.py  7f9f013dd763_init.py  82c10e5c9415_init.py  8c06fd654fff_initial_migration.py  a3148e0ed884_initial_migration.py  ca5b014010f6_initial_migration.py  d6bd2f12939d_initial_migration.py
app/: __init__.py  models.py  routes.py  time_utils.py  utils.py
app/static/css/: home.css  index.css  login.css  register.css  styles.css  theme.css
app/static/js/: home.js  theme.js
app/templates/: auth.html  home.html  index.html  login.html  register.html  theme.html
