[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Spaceocean"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
flask-sqlalchemy = "^3.1.1"
alembic = "^1.14.1"
flask-login = "^0.6.3"
flask-session = "^0.8.0"
pytz = "^2025.1"
requests = "^2.32.3"
bs4 = "^0.0.2"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
